# sptf

./: .gitignore  docker-compose.yml
client/: .gitignore  package-lock.json  package.json
client/src/main/: main.ts  preload.js
client/src/main/custom-utils/: conn.ts  sptf-cookie.ts
client/src/renderer/: App.css  App.tsx  fileBrowser.tsx  login.tsx  signup.tsx  window.d.ts
client/src/renderer/custom-utils/: conn.ts  error_handling.ts
database/: create_table.sql
protos/: sptf.proto
server/: .gitignore  Cargo.toml  Dockerfile  build.rs
server/src/: common.rs  config.rs  error.rs  files.rs  filewatcher.rs  main.rs  manager.rs  session.rs  user.rs
server/src/messages/: filewatcher_received.rs  manager_received.rs  manager_to_session.rs  mod.rs  session_to_manager.rs
server/src/protos/: mod.rs
