[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = { version = "4", features = ["rustls"] }
actix-web-actors = "4"
actix-tls = "3"
rustls = "0.20"
rustls-pemfile = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
log = "0.4"
env_logger = "0.8"
protobuf = { version = "~2", features = ["with-bytes"] }
rand = "0.8"

[build-dependencies]
protobuf-codegen-pure = "~2"
