[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix = "0.13"
actix-web = { version = "4", features = ["rustls"] }
actix-web-actors = "4"
actix-tls = "3"
rustls = "0.20"
rustls-pemfile = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
log = "0.4"
env_logger = "0.8"
protobuf = { version = "~2", features = ["with-bytes"] }
rand = "0.8"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
deadpool = "0.9"
deadpool-postgres = "0.10"
redis = "0.21"
deadpool-redis = "0.10"
uuid = { version = "0.8", features = ["v4"] }
sha2 = "0.10"
notify = "4.0"

[build-dependencies]
protobuf-codegen-pure = "~2"
